refactor: update hash function and use Value.of() for tuple and hmap return types